# curses-gaming-window

./: CMakeLists.txt  LICENSE  README.md
data/: example.0.bin.tile  example.0.txt.plts  example.1.txt.plts  example.1.txt.tile  example.1.txt.tmap  example.1.txt.ttbl
libcgw/: CGWBitvector.h  CGWCSGeom.c  CGWCSGeom.h  CGWCSGeom2D.c  CGWCSGeom2D.h  CGWColor.c  CGWColor.h  CGWCompositePixelBuffer.c  CGWCompositePixelBuffer.h  CGWConfig.h.in  CGWControls.c  CGWCurses.c  CGWCurses.h  CGWDecoder.c  CGWDecoder.h  CGWFixedPrec.h  CGWGeom.c  CGWGeom.h  CGWGeom.s  CGWGeom2D.c  CGWGeom2D.h  CGWGeom2D.s  CGWMath.c  CGWMath.h  CGWMath.s  CGWMetaTileTable.h  CGWPaletteTable.c  CGWPixel.h  CGWPixelBuffer.c  CGWPixelBuffer.h  CGWSprite.h  CGWStats.h  CGWTile.c  CGWTile.h  CGWTileCell.h  CGWTileMap.c  CGWTileMap.h  CGWTileView.h  CGWTiming.h  CGWTurtle.c  (+9 more)
libcgw/CGWGeom2D.asm/: apple-aarch64.s
libcgw/base/: CGWConfig.h.in  CGWFixedPrec.c  CGWFixedPrec.h  CGWGeom2D.c  CGWGeom2D.h  CGWStats.c  CGWTiming.h  CMakeLists.txt
libcgw/base/CGWGeom2D.asm/: apple-aarch64.c
libcgw/curses/: CGWCurses.c  CMakeLists.txt
libcgw/engine/: CGWAttr.h  CGWControls.h  CGWMetaTileTable.c  CGWPalette.c  CGWPalette.h  CGWPaletteTable.h  CGWPaletteTableArray.c  CGWPaletteTableArray.h  CGWPixelBuffer.c  CGWSprite.h  CGWTileMap.c  CGWTileMap.h  CGWTileTable.c  CGWTileTable.h  CMakeLists.txt
libcgw/turtle/: CGWTurtle2D.c  CGWTurtle2D.h  CMakeLists.txt
tests/: CMakeLists.txt
tests/geomtest/: CMakeLists.txt  geomtest.c
tests/matrixtest/: CMakeLists.txt  matrixtest.c
yertle/: CMakeLists.txt  jeff.turtle  square-spiral.turtle  triangle-spiral.turtle  yertle.c
